--- a/src/css/cartstyle.css
+++ b/src/css/cartstyle.css
@@ -62,13 +62,13 @@
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    padding-left: 2.5%;
+    padding-left: 1%;
     padding-top: 8%;
     
 }
 
 .book_details{
-    height: fit-content;
+    height: 362px;
     overflow-y: scroll;
 }
 
@@ -133,7 +133,7 @@
     width:60%;
     justify-content:flex-start;
     height:200px;
-    padding-left:1%;
+    padding-left:2%;
 }
 
 .customer_button{
@@ -170,7 +170,7 @@
     
 }
 .order-summary{
-    height:300px;
+    height:362px;
     overflow-y:scroll;
 }
 
